no subjects error message added to html

--- a/teachers.html
+++ b/teachers.html
@@ -63,10 +63,11 @@
 			<label for="uploadSub">Upload Subjects File (required for both file check and/or manual input): </label>
 			<input type="file" id="subFile" name="uploadSub" accept=".csv">
             <button type="button" id="checkItSub" name="uploadSub" value="uploadSub">Add to Form</button>
-			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid Subjects csv file from this software.</p>
+			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid csv file from this software.</p>
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the templates provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows has produced an error. Please check the error messages below the user input for more information, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
+			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software above, and click the "Add to Form" button.</p>
 			<br>
 			<br>
 			<br>
