defaults settings completed

--- a/teachers.html
+++ b/teachers.html
@@ -67,7 +67,7 @@
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the templates provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows has produced an error. Please check the error messages below the user input for more information, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
-			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software above, and click the "Add to Form" button.</p>
+			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software above, click the "Add to Form" button, then try again.</p>
 			<br>
 			<br>
 			<br>
@@ -82,6 +82,7 @@
 			<br>
 			<label for="setDefaults">Set Defaults : </label>
             <button type="button" id="setDefaults" name="setDefaults" value="setDefaults">Set Defaults</button>
+			<p class="hide noPeriods" id="noPeriods">Sorry, it seems you haven't set a value for the default number of periods taught.  This should be a number greater than 0, recommended to be the number of periods taught by the majority of your staff. Please amend your value above and try again.</p>
 			<br>
 			<br>
 			<br>
