typo in errors fixed

--- a/teachers.html
+++ b/teachers.html
@@ -113,8 +113,8 @@
 			<button type="button" id="addTeacher" name="addTeacher" value="addTeacher">Add teacher</button>
 			<br>
 			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above.  All fields are required with the exception of the Secondary Subject. Periods Taught should be a number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your subjects file. Please complete all the input boxes.</p>
-			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Subject Code can only be Letters or Numbers.  Please amend your Subject Code above.</p>
-			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Subject Code above.</p>
+			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Teacher Code can only be Letters or Numbers.  Please amend your Teacher Code above.</p>
+			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Teacher Code above.</p>
 			<br>
 			<br>
 			<p>Check your Teachers: (don't forget to scroll down to save your template)</p>
