--- a/teachers.html
+++ b/teachers.html
@@ -55,14 +55,15 @@
 		<br>
 
 		<form>
-		    <label for="uploadTeacher">Upload previous Teacher File : </label>
-			<input type="file" id="teacherFile" name="uploadTeacher" accept=".csv">
-            <button type="button" id="checkIt" name="uploadTeacher" value="uploadTeacher">Check it</button>
-			<br>
-			<br>
+		    
 			<label for="uploadSub">Upload Subjects File (required for both file check and/or manual input): </label>
 			<input type="file" id="subFile" name="uploadSub" accept=".csv">
-            <button type="button" id="checkItSub" name="uploadSub" value="uploadSub">Add to Form</button>
+            <button type="button" id="checkItSub" name="uploadSub" value="uploadSub">Add Subjects</button>
+			<br>
+			<br>
+			<label for="uploadTeacher">Upload previous Teacher File : </label>
+			<input type="file" id="teacherFile" name="uploadTeacher" accept=".csv">
+            <button type="button" id="checkIt" name="uploadTeacher" value="uploadTeacher">Check it</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid csv file from this software.</p>
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the templates provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
@@ -71,7 +72,7 @@
 			<br>
 			<br>
 			<br>
-			<label for="defaultPeriods">What is the default number of contact periods taught by teachers? :</label>
+			<label for="defaultPeriods">What is the default number of contact periods taught by teachers per timetable? :</label>
   			<input type="number" id="defaultPeriods" name="defaultPeriods">
 			<br>
 			<br>
