--- a/teachers.html
+++ b/teachers.html
@@ -56,7 +56,7 @@
 
 		<form>
 		    
-			<label for="uploadSub">Upload Subjects File (required for both file check and/or manual input): </label>
+			<label for="uploadSub">Upload Subjects File (required for both file check and/or manual input).  Don't forget to press the "Add Subjects" button once you have selected your file. : </label>
 			<input type="file" id="subFile" name="uploadSub" accept=".csv">
             <button type="button" id="checkItSub" name="uploadSub" value="uploadSub">Add Subjects</button>
 			<br>
