--- a/teachers.html
+++ b/teachers.html
@@ -72,7 +72,7 @@
 			<br>
 			<br>
 			<br>
-			<label for="defaultPeriods">What is the default number of contact periods taught by teachers per timetable? :</label>
+			<label for="defaultPeriods">What is the default number of periods taught by teachers per timetable? (eg what number of lessons are taught by most teachers - must be a whole number greater than 0) :</label>
   			<input type="number" id="defaultPeriods" name="defaultPeriods">
 			<br>
 			<br>
@@ -83,7 +83,7 @@
 			<br>
 			<label for="setDefaults">Set Defaults : </label>
             <button type="button" id="setDefaults" name="setDefaults" value="setDefaults">Set Defaults</button>
-			<p class="hide noPeriods" id="noPeriods">Sorry, it seems you haven't set a value for the default number of periods taught.  This should be a number greater than 0, recommended to be the number of periods taught by the majority of your staff. Please amend your value above and try again.</p>
+			<p class="hide noPeriods" id="noPeriods">Sorry, it seems you haven't set a value for the default number of periods taught.  This should be a whole number greater than 0, recommended to be the number of periods taught by the majority of your staff. Please amend your value above and try again.</p>
 			<br>
 			<br>
 			<br>
@@ -95,7 +95,7 @@
   			<input type="text" id="teacherCode" name="teacherCode">
 			<br>
 			<br>
-            <label for="teacherPeriods">Sessions taught :</label>
+            <label for="teacherPeriods">Periods taught (must be a whole number greater than 0):</label>
   			<input type="number" id="teacherPeriods" name="teacherPeriods">
 			<br>
 			<br>
@@ -113,7 +113,7 @@
 			<br>
 			<button type="button" id="addTeacher" name="addTeacher" value="addTeacher">Add teacher</button>
 			<br>
-			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above.  All fields are required with the exception of the Secondary Subject. Periods Taught should be a number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your subjects file. Please complete all the input boxes.</p>
+			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above correctly.  All fields are required with the exception of the Secondary Subject. Periods Taught should be a whole number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your subjects file. Please complete all the input boxes.</p>
 			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Teacher Code can only be Letters or Numbers.  Please amend your Teacher Code above.</p>
 			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Teacher Code above.</p>
 			<br>
