Change Primary subject to Main subject

--- a/teachers.html
+++ b/teachers.html
@@ -99,7 +99,7 @@
   			<input type="number" id="teacherPeriods" name="teacherPeriods">
 			<br>
 			<br>
-			<label for="primarySub">Primary Subject :</label>
+			<label for="primarySub">Main Subject :</label>
 			<select name="primarySub" id="primarySub">
 				<option value=""></option>
 			</select>
