--- a/teachers.html
+++ b/teachers.html
@@ -68,7 +68,7 @@
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the templates provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows has produced an error. Please check the error messages below the user input for more information, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
-			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software above, click the "Add to Form" button, then try again.</p>
+			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Subjects" button, then try again.</p>
 			<br>
 			<br>
 			<br>
@@ -113,7 +113,7 @@
 			<br>
 			<button type="button" id="addTeacher" name="addTeacher" value="addTeacher">Add teacher</button>
 			<br>
-			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above correctly.  All fields are required with the exception of the Secondary Subject. Periods Taught should be a whole number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your subjects file. Please complete all the input boxes.</p>
+			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above correctly.  All fields are required with the exception of the Secondary Subject. Contact Periods should be a whole number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your Subjects file. Please complete all the input boxes.</p>
 			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Teacher Code can only be Letters or Numbers.  Please amend your Teacher Code above.</p>
 			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Teacher Code above.</p>
 			<br>
