subjects upload added

--- a/classes.html
+++ b/classes.html
@@ -22,7 +22,7 @@
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
 </head>
-<body id="top" onload="teachersStart()">
+<body id="top" onload="classesStart()">
     <nav class="nav" id="nav">
 		<ul>
 			<li>
