--- a/classes.html
+++ b/classes.html
@@ -92,14 +92,15 @@
             <button type="button" id="setBlock" name="setBlock" value="setBlock">Set Block</button>
 			<p class="hide blockShortInput" id="blockShortInput">Sorry, it seems you haven't completed all fields above.  Please ensure all above fields are completed correctly and try again.</p>
 			<p class="hide blockNameComma" id="blockNameComma">Sorry, commas aren't accepted characters. Please amend your block name and try again.</p>
-			<p class="hide blockPeriodsInvalid" id="blockPeriodsInvalid">Sorry, you don't seem to have entered a valid value for the periods for this block.  Please enter a whole nnumber greater than 0 and try again.</p>
+			<p class="hide blockPeriodsInvalid" id="blockPeriodsInvalid">Sorry, you don't seem to have entered a valid value for the periods for this block.  Please enter a whole number greater than 0 and try again.</p>
 			<br>
 			<br>
 			<br>
 			<p>A band is a class or collection of classes that all have the same set of students within a block.  This could be your year 7 English set 1 class, or your year 10 options A Geography class, or your 8G class, as examples.</p>
 			<br>
 			<br>
-			<p id="currentBlock">You are currently working on block : </p>
+			<p class="inline">You are currently working on block : </p>
+			<p class="whiteBG inline" id="currentBlock"></p>
 			<br>
 			<br>
 			<label for="bandName">Give the Band a unique Name within the Block :</label>
@@ -112,7 +113,12 @@
 			<br>
 			<br>
 			<br>
-			<p id="currentBand">You are currently working on band : </p>
+			<p class="inline">You are currently working on band : </p>
+			<p class="whiteBG inline" id="currentBand"></p>
+			<br>
+			<br>
+			<p class="inline">Total periods in this band should add up to : </p>
+			<p class="whiteBG inline" id="currentBlockPeriods"></p>
 			<br>
 			<br>
 			<label for="classCode">Class Code :</label>
