set band name button functionality added

--- a/classes.html
+++ b/classes.html
@@ -109,7 +109,10 @@
 			<br>
 			<label for="setBand">Set Band : </label>
             <button type="button" id="setBand" name="setBand" value="setBand">Set Band</button>
-			<p class="hide bandShortInput" id="bandShortInput">Sorry, it seems you haven't completed all fields above.  Please ensure all above fields are completed correctly and try again.</p>
+			<p class="hide bandShortInput" id="bandShortInput">Sorry, it seems you haven't given your band a name.  Please ensure all above fields are completed correctly and try again.</p>
+			<p class="hide bandNameComma" id="bandNameComma">Sorry, commas aren't accepted characters. Please amend your band name and try again.</p>
+			<p class="hide noBlockSet" id="noBlockSet">Sorry, it seems you've not set the values for your block. Please set your block values, press the "Set Block" button, and try again.</p>
+			<p class="hide bandAlreadyInBlock" id="bandAlreadyInBlock">Sorry, it seems you already have this band in your block.  Please amend the value above and try again.</p>
 			<br>
 			<br>
 			<br>
@@ -135,7 +138,7 @@
   			<input type="number" id="classPeriods" name="classPeriods">
 			<br>
 			<br>
-			<button type="button" id="addClass" name="addClass" value="addClass">Add teacher</button>
+			<button type="button" id="addClass" name="addClass" value="addClass">Add class</button>
 			<br>
 			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above correctly.  All fields are required with the exception of the Secondary Subject. Contact Periods should be a whole number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your Subjects file. Please complete all the input boxes.</p>
 			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Teacher Code can only be Letters or Numbers.  Please amend your Teacher Code above.</p>
