processing class added

--- a/classes.html
+++ b/classes.html
@@ -140,9 +140,13 @@
 			<br>
 			<button type="button" id="addClass" name="addClass" value="addClass">Add class</button>
 			<br>
+			<p class="hide noSubjects" id="noSubjects1">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Subjects" button, then try again.</p>
+			<p class="hide noBandSet" id="noBandSet">Sorry, you don't seem to have set a current Band. Please set a Band name above and try again.</p>
 			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above correctly.  All fields are required with the exception of the Secondary Subject. Contact Periods should be a whole number higher than 0. If you are inputting from file, please also check your Subject Codes match those in your Subjects file. Please complete all the input boxes.</p>
-			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Teacher Code can only be Letters or Numbers.  Please amend your Teacher Code above.</p>
-			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Teacher Code above.</p>
+			<p class="hide classCodeComma" id="classCodeComma">Sorry, commas aren't accepted characters. Please amend your class code and try again.</p>
+			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Subject Code can only be Letters or Numbers.  Please amend your Subject Code(s) in your file and try again.</p>
+			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Class Code you have added is already in the list.  Please amend your Class Code above.</p>
+			<p class="hide classPeriodsInvalid" id="classPeriodsInvalid">Sorry, you don't seem to have entered a valid value for the periods for this class.  Please enter a whole number greater than 0 and try again.</p>
 			<br>
 			<br>
 			<p>Check your Band: (don't forget to scroll down to set your band)</p>
