partial save band data

--- a/classes.html
+++ b/classes.html
@@ -159,6 +159,7 @@
             <button type="button" id="saveBand" name="saveBand" value="saveBand">Set Band</button>
 			<br>
 			<p>If this is not correct, please click a row to select, and then click delete to delete the faulty row.</p>
+			<p class="hide bandTooShort" id="bandShortPeriods">Sorry, it seems you haven't got any classes in your band.  Please add at least one class to your band and try again.</p>
 			<p class="hide bandShortPeriods" id="bandShortPeriods">Sorry, it seems you haven't got enough periods for this band.  Please add additional class periods until the band has sufficient periods to meet the value set as as the default by your block and try again.</p>
 			<p class="hide bandOverPeriods" id="bandOverPeriods">Sorry, it seems you have too many periods for this band.  Please remove class periods until the band has been reduced to the number of periods to meet the value set as as the default by your block and try again.</p>
 			<br>
