chck for band length in block done

--- a/classes.html
+++ b/classes.html
@@ -172,6 +172,9 @@
 			<br>
 			<label for="saveBlock">If this is correct : </label>
             <button type="button" id="saveBlock" name="saveBlock" value="saveBlock">Set Block</button>
+			<p class="hide blockTooShort" id="blockTooShort">Sorry, it seems you haven't got any bands in your block.  Please add at least one band to your block and try again.</p>
+			<p class="hide blockUnequalPeriods" id="blockUnequalPeriods">Sorry, it seems the number of periods isn't the same across all bands/as set above.  Please check your bands, and remove the band(s) that don't match the correct number of periods.</p>
+
 			<br>
 			<p>If this is not correct, please click a row to select, and then click delete to delete the faulty row.</p>
 			<br>
