error for block alreasy in global list resolved

--- a/classes.html
+++ b/classes.html
@@ -93,6 +93,7 @@
 			<p class="hide blockShortInput" id="blockShortInput">Sorry, it seems you haven't completed all fields above.  Please ensure all above fields are completed correctly and try again.</p>
 			<p class="hide blockNameComma" id="blockNameComma">Sorry, commas aren't accepted characters. Please amend your block name and try again.</p>
 			<p class="hide blockPeriodsInvalid" id="blockPeriodsInvalid">Sorry, you don't seem to have entered a valid value for the periods for this block.  Please enter a whole number greater than 0 and try again.</p>
+			<p class="hide blockAlreadyUsed" id="blockAlreadyUsed">Sorry, this block name already appears to be in use.  Please amend your block name and try again.</p>
 			<br>
 			<br>
 			<br>
