--- a/subjects.html
+++ b/subjects.html
@@ -54,7 +54,7 @@
 		<br>
 
 		<form>
-		    <label for="upload">Upload previous File : </label>
+		    <label for="subFile">Upload previous File : </label>
 			<input type="file" id="subFile" name="upload" accept=".csv">
             <button type="button" id="checkIt" name="upload" value="Upload">Check it</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid Subjects csv file from this software.</p>
@@ -90,7 +90,9 @@
             <button type="button" id="save" name="save" value="Save">Save</button>
 			<br>
 			<p>If this is not correct, please click a row to select, and then click delete to delete the faulty row.</p>
-    </div>
-
+			
+		
+		</form>
+	</div>
 </body>
 </html>
