--- a/timetable.html
+++ b/timetable.html
@@ -43,7 +43,7 @@
 
     <div class="timetablePage mainPage">
         <form>
-            <label for="upload">Upload previous File : </label>
+            <label for="ttFile">Upload previous File : </label>
 			<input type="file" id="ttFile" name="upload" accept=".json">
             <button type="button" id="checkIt" name="upload" value="Upload">Check it</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid template json file from this software.</p>
