analysis page added

--- a/analysis.html
+++ b/analysis.html
@@ -34,16 +34,16 @@
 			<li>
 				<a href='teachers.html'>Teachers</a>
 			</li>
-			<li id="navActive">
+			<li>
 				<a href='classes.html'>Classes</a>
 			</li>
-			<li>
+			<li  id="navActive">
 				<a href='analysis.html'>Analysis</a>
 			</li>
 		</ul>
 	</nav>
 
-    <div class="classesPage mainPage">
+    <div class="analysisPage mainPage">
         
 		<label for="template">Download Template File : </label>
 		<button type="button" id="template" name="template" value="template">Template</button>
