--- a/teachers.html
+++ b/teachers.html
@@ -43,7 +43,7 @@
 		</ul>
 	</nav>
 
-    <div class="subjectsPage mainPage">
+    <div class="teachersPage mainPage">
         
 		<label for="template">Download Template File : </label>
 		<button type="button" id="template" name="template" value="template">Template</button>
