user error messages amended

--- a/analysis.html
+++ b/analysis.html
@@ -22,7 +22,7 @@
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
 </head>
-<body id="top" onload="classesStart()">
+<body id="top" onload="analysisStart()">
     <nav class="nav" id="nav">
 		<ul>
 			<li>
@@ -66,6 +66,10 @@
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows has produced an error. Please check the error messages below the user input for more information, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide periodsDontMatch" id="periodsDontMatch">Sorry, it seems your file has blocks with bands that have differnt numbers of periods in the bands.  Please check that all classes within bands within a block add up to the same number of periods and try again.  Check the table below for the problem block(s).</p>
+			<br>
+			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields for some rows, please check this file in the appropriate page of this software, resolve the issue(s), resave the file and try again.</p>
+			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, one or more of your codes is invalid, please check this file in the appropriate page of this software, resolve the issue(s), resave the file and try again.</p>
+			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, one or more rows in this file has a duplicated value, please check this file in the appropriate page of this software, resolve the issue(s), resave the file and try again.</p>
 			<br>
 			<br>
 			<br>
