file loads complete

--- a/analysis.html
+++ b/analysis.html
@@ -17,6 +17,7 @@
 	  <script src="JS/libraries/p5.min.js"></script>
 	  <script src="JS/Script.js"></script>
 	  <script src="JS/subjects.js"></script>
+	  <script src="JS/teachers.js"></script>
 	  <script src="JS/classes.js"></script>
 	  <script src="JS/analysis.js"></script>
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,8 +58,8 @@
             <button type="button" id="checkItTeacher" name="uploadTeacher" value="uploadTeacher">Add Teachers</button>
 			<br>
 			<br>
-			<label for="clasesFile">Upload Classes File. Don't forget to press the "Add Classes" button once you have selected your file. : </label>
-			<input type="file" id="clasesFile" name="uploadClasses" accept=".csv">
+			<label for="classesFile">Upload Classes File. Don't forget to press the "Add Classes" button once you have selected your file. : </label>
+			<input type="file" id="classesFile" name="uploadClasses" accept=".csv">
             <button type="button" id="checkItClasses" name="uploadClasses" value="uploadClasses">Add Classes</button>
 			<br>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid csv file from this software.</p>
