initial anaysis table drawn

--- a/analysis.html
+++ b/analysis.html
@@ -74,11 +74,13 @@
 			<br>
 			<br>
 			<br>
-			<p>Once you have uploaded all above files.  Check if you have enough specialist staffing for the classes you plan. Initial analysis :</p>
+			<p>Once you have uploaded all above files.  Check if you have enough specialist staffing for the classes you plan. White row subjects are under-staffed, navy row subjects are over staffed.</p>
+			<p>Initial analysis :</p>
 			<button type="button" id="mainSubjects" name="mainSubjects" value="mainSubjects" class="mainSubjects">Main Subjects</button>
 			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Subjects" button, then try again.</p>
 			<p class="hide noTeachers" id="noTeachers">Sorry, it seems you haven't uploaded a valid Teachers file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Teachers" button, then try again.</p>
 			<p class="hide noClasses" id="noClasses">Sorry, it seems you haven't uploaded a valid Classes file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Classes" button, then try again.</p>
+			<br>
 			<br>
 			<table id="mainTable" ></table>
 			<br>
