partial data processing for secondary checking

--- a/analysis.html
+++ b/analysis.html
@@ -87,6 +87,10 @@
 			<br>
 			<p class="secondarySubjects hide">Once you have uploaded all above files.  Check if you have enough specialist staffing for the classes you plan.  Secondary analysis :</p>
 			<button type="button" id="secondarySubjects" name="secondarySubjects" value="secondarySubjects" class="secondarySubjects hide">Secondary Subjects</button>
+
+			<br class="secondarySubjects hide">
+			<p class="secondarySubjects hide" id="noInitial">Sorry, you don't seem to have run the initial analysis.  Please run the initial analysis above and try again.</p>
+			<br class="secondarySubjects hide">
 			<br class="secondarySubjects hide">
 			<table id="secondaryTable" class="secondarySubjects hide"></table>
 			<br class="secondarySubjects hide">
