--- a/classes.html
+++ b/classes.html
@@ -69,7 +69,7 @@
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows has produced an error. Please check the error messages below the user input for more information, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<p class="hide noSubjects" id="noSubjects">Sorry, it seems you haven't uploaded a valid Subjects file. Please upload a valid Subjects csv file from this software in the area above, click the "Add Subjects" button, then try again.</p>
-			<p class="hide periodsDontMatch" id="periodsDontMatch">Sorry, it seems your file has blocks with bands that have differnt numbers of periods in the bands.  Please check that all classes within bands within a block add up to the same number of periods and try again.  Check the table below for the problem block(s).</p>
+			<p class="hide periodsDontMatch" id="periodsDontMatch">Sorry, it seems your file has blocks with bands that have different numbers of periods in the bands.  Please check that all classes within bands within a block add up to the same number of periods and try again.  Check the table below for the problem block(s).</p>
 
 			<br>
 			<br>
