wording change to analysis

--- a/analysis.html
+++ b/analysis.html
@@ -95,15 +95,15 @@
 			<table id="secondaryTable" class="secondarySubjects hide"></table>
 			<br class="secondarySubjects hide">
 			<br class="secondarySubjects hide">
-			<p class="secondarySubjects hide">Teacher Swaps :</p>
+			<p class="secondarySubjects hide">Teacher Swaps.  Note, this is not necessarily the only way to staff the timetable, just a guide as to how it could be done. :</p>
 			<br class="secondarySubjects hide">
 			<table id="teacherSwaps" class="secondarySubjects hide"></table>
 			<br class="secondarySubjects hide">
 			<br class="secondarySubjects hide">
-			<label for="save">To save this information : </label>
-            <button type="button" id="save" name="save" value="Save">Save</button>
-			<br>
-			<p>If this is not correct, please amend one or more of your input files and try again.</p>
+			<label class="secondarySubjects hide" for="save">To save these swaps : </label>
+            <button type="button" id="save" name="save" value="Save" class="secondarySubjects hide">Save</button>
+			<br class="secondarySubjects hide">
+			<p class="secondarySubjects hide">If this is not as expected, please amend one or more of your input files and try again.</p>
     
 		</form>
 	</div>
