--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<br>
 		<p>You can complete the pages at your leisure, and you may wish to delegate the completion/maintenance of some files.  For example, you may wish to make the Teachers file update part of onboarding and offboarding staff, and therefore completed by your HR.</p>
 		<br>
-		<p>It is reccomended that you check your files in the appropriate page before using them for analysis to help ensure that there are no errors in the file that will prevent the analysis from working.</p>
+		<p>It is recommended that you check your files in the appropriate page before using them for analysis to help ensure that there are no errors in the file that will prevent the analysis from working.</p>
 		<br>
 		<p>Fear not, your data stays with you.  All data stays in your browser and computer and is never transmitted to our servers.</p>
 	</div>
