--- a/teachers.html
+++ b/teachers.html
@@ -3,24 +3,24 @@
 <head>
 	  <meta charset="UTF-8">
 	  <title>TTAssist</title>
-	  <!-- <link rel="icon" type="image/x-icon" href="Images/CCLogo.png"/> -->
+	  <link rel="icon" type="image/x-icon" href="images/TTAssistLogo.png"/>
 	  <link rel="stylesheet" href="CSS/Style.css">
-	  <!-- <link rel="apple-touch-icon" sizes="57x57" href="Images/apple-icon-57x57.png">
-	  <link rel="apple-touch-icon" sizes="60x60" href="Images/apple-icon-60x60.png">
-	  <link rel="apple-touch-icon" sizes="72x72" href="Images/apple-icon-72x72.png">
-	  <link rel="apple-touch-icon" sizes="76x76" href="Images/apple-icon-76x76.png">
-	  <link rel="apple-touch-icon" sizes="114x114" href="Images/apple-icon-114x114.png">
-	  <link rel="apple-touch-icon" sizes="120x120" href="Images/apple-icon-120x120.png">
-	  <link rel="apple-touch-icon" sizes="144x144" href="Images/apple-icon-144x144.png">
-	  <link rel="apple-touch-icon" sizes="152x152" href="Images/apple-icon-152x152.png">
-	  <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png"> -->
+	  <link rel="apple-touch-icon" sizes="57x57" href="images/Icon-57.png">
+	  <link rel="apple-touch-icon" sizes="60x60" href="images/Icon-60.png">
+	  <link rel="apple-touch-icon" sizes="72x72" href="images/Icon-72.png">
+	  <link rel="apple-touch-icon" sizes="76x76" href="images/Icon-76.png">
+	  <link rel="apple-touch-icon" sizes="114x114" href="images/Icon-114.png">
+	  <link rel="apple-touch-icon" sizes="120x120" href="images/Icon-120.png">
+	  <link rel="apple-touch-icon" sizes="144x144" href="images/Icon-144.png">
+	  <link rel="apple-touch-icon" sizes="152x152" href="images/Icon-152.png">
+	  <link rel="apple-touch-icon" sizes="180x180" href="images/Icon-180.png">
 	  <script src="JS/libraries/p5.min.js"></script>
 	  <script src="JS/Script.js"></script>
 	  <script src="JS/subjects.js"></script>
 	  <script src="JS/teachers.js"></script>
 	  <script src="JS/teachersOnly.js"></script>
-	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta name="description" content="TTAssist is a timetabling assistive tool." />
 </head>
 <body id="top" onload="teachersStart()">
     <nav class="nav" id="nav">
